Fix code block styles in dark mode

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -140,6 +140,10 @@ pre {
 
   &.highlight {
     background-color: rgba(239, 239, 239, 0.3);
+
+    @media (prefers-color-scheme: dark) {
+      background: $background--dark;
+    }
   }
 }
 
